two/blue-green/blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-blue
  namespace: hello
spec:
  replicas: 8
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: l4zy/hello:blue
        ports:
        - containerPort: 8080
