two/blue-green/green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-green
  namespace: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: l4zy/hello:green
        ports:
        - containerPort: 8080
