two/blue-green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: hello
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/blue-green"
        backend:
          service:
            name: hello
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  sessionAffinity: None
  selector:
    app: hello
